# metamodel

./: Cargo.toml
metamodel/: Cargo.toml
metamodel/src/: lib.rs
metamodel_derive/: Cargo.toml
metamodel_derive/src/: lib.rs
metamodel_tests/: Cargo.toml
metamodel_tests/src/: main.rs
