[package]
name = "metamodel_derive"
version = "0.1.0"
authors = ["Jean-Marie Comets <jean.marie.comets@gmail.com>"]
edition = "2018"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "0.4"
quote = "0.6.12"
metamodel = { path = "../metamodel" }
syn = { version = "0.15.34", features = ["extra-traits"] }
